apps/news-app-ui/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: news-app-ui
  annotations:
    argocd.argoproj.io/sync-wave: "0"
