apps/news-app-ui/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-app-ui
  namespace: news-app-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: news-app-ui
  template:
    metadata:
      labels:
        app: news-app-ui
    spec:
      containers:
        - name: news-app-ui
          image: khumo/news-app:v2.5.5
          ports:
            - containerPort: 80
      resources: {}
